--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
             "email": "erilandocarvalho@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=7.4"
+    }
+    
 }
